--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <h1 align="center" id="highlight">Digi-Tips is under construction</h1>
+<div align="center">
 <img src="website-under-construction-coming-soon.jpg" height="300" width="350" align="center">
+</div>
 <h2 align="center" id="highlight">Sorry for any inconvinience caused.</h2>
 </body>
 </html>
